--- a/blog.html
+++ b/blog.html
@@ -19,7 +19,7 @@
           <a class="item" href="about.html">About</a>
           <a href="projects.html" class="item">Projects</a>
           <a class="active item">Blog</a>
-          <a href="game.html" class="item">Mini Game</a>
+          <!-- <a href="game.html" class="item">Mini Game</a> -->
         </div>
       </div>
       <div class="ui container grid" id="blogs"></div>
