--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <a class="item" href="about.html">About</a>
           <a href="projects.html" class="item">Projects</a>
           <a href="blog.html" class="item">Blog</a>
-          <a href="game.html" class="item">Mini Game</a>
+          <!-- <a href="game.html" class="item">Mini Game</a> -->
         </div>
       </div>
       <div class="ui text container">
