--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
           <a class="item" href="about.html">About</a>
           <a href="projects.html" class="active item">Projects</a>
           <a href="blog.html" class="item">Blog</a>
-          <a href="game.html" class="item">Mini Game</a>
+          <!-- <a href="game.html" class="item">Mini Game</a> -->
         </div>
       </div>
       <div class="ui container" id="projects"></div>
